Fix project count z-index

--- a/src/blocks/projects/_projects.scss
+++ b/src/blocks/projects/_projects.scss
@@ -43,6 +43,7 @@ $project-screen-spacer: 30px;
     position: absolute;
     top: 10px;
     right: 30px;
+    z-index: 1000;
     color: var(--white);
 
     @include typography.label-3;
